# webby.os

./: .eslintrc.js  .gitignore  .prettierrc.json  LICENSE  README.md  dev.sh  docker-compose.yml  dockerfile  init_db.sh  lerna.json  package.json
.github/workflows/: build-for-windows.yml  build.yml  main.yml  release.yml
apps/: .eslintignore  package.json  tsconfig.json  types.ts  webpack.config.js
apps/src/anime/: index.tsx
apps/src/apps/3d-editor/: index.tsx
apps/src/apps/app-center/: index.tsx
apps/src/apps/book-reader/: index.module.less  index.tsx
apps/src/apps/chat/: chat.tsx  index.tsx
apps/src/apps/chat-gpt/: chat.module.less  chat.tsx  index.tsx
apps/src/apps/file-browser/: file.tsx  index.tsx
apps/src/apps/files/: index.tsx
apps/src/apps/image/: image-viewer.module.less  image-viewer.tsx  index.tsx
apps/src/apps/paint/: index.tsx
apps/src/apps/pdf-viewer/: index.tsx  pdf-viewer.module.less  pdf-viewer.tsx  utils.ts
apps/src/apps/setting/: index.module.less  index.tsx
apps/src/apps/shell/: index.tsx
apps/src/apps/test/: index.tsx
apps/src/apps/text-editor/: editor.tsx  index.tsx
apps/src/apps/video-call/: index.tsx
apps/src/apps/video-player/: index.tsx  video-player.module.less  video-player.tsx
apps/src/book/: index.tsx
apps/src/file-browser/: index.tsx
apps/src/files/: index.tsx
apps/src/icons/: icons.js
apps/src/image/: image-viewer.module.less  image-viewer.tsx  index.tsx
apps/src/pdf-viewer/: index.tsx  pdf-viewer.tsx
apps/src/setting/: index.module.less  index.tsx  setting.tsx
apps/src/shell/: index.module.less  index.tsx
apps/src/test/: index.tsx
apps/src/text-editor/: index.tsx
apps/src/utils/: download.ts  events.ts  fonts.ts  formatter.ts
apps/src/video-player/: video-player.module.less
client/: .gitignore  README.md  package.json  rspack.config.js  tsconfig.json
client/config/: webpack.config.js
client/public/: index.html  manifest.json
client/scripts/: update-icon.sh
client/src/: App.less  App.tsx  index.css  index.tsx  routers.tsx  theme.ts
client/src/apis/: auth.ts  file.ts  gallery.ts  utils.ts
client/src/hooks/: common.ts
client/src/icons/: icons.js
client/src/isolate-pages/: login.tsx
client/src/store/: index.tsx
client/src/typings/: global.d.ts
client/src/utils/: animation.ts  common.ts  micro-app.less  micro-app.module.less  micro-app.ts  xss-filter.ts
components/: README.md  package.json  rspack.config.js  tsconfig.json  webpack.config.js
components/scripts/: update-icon.sh
components/src/: index.ts
components/src/icons/: icons.js
components/src/types/: global.d.ts  global.ts
components/src/utils/: events.ts
core/: package.json  tsconfig.json  webpack.config.js
core/src/api/: auth.ts  index.ts  system-info.ts
core/src/fs/: index.ts  local-cache.ts
core/src/kv-storage/: index.ts  reactive.ts
core/src/message-queue/: index.ts
core/src/shell/: index.ts
core/src/system/: index.ts
core/src/tunnel/: http.ts  index.ts  net.ts
core/src/types/: common.ts  global.ts  index.ts  theme.ts  web-app.ts
core/src/utils/: array.ts  common.ts  http.ts  index.ts
core/src/web-app/: app-manager.ts  index.module.less  index.ts  process-manager.ts  system-hook.ts  window-manager.ts  z-index-manager.ts
docker/: build-env.native.dockerfile  build-env.x86.dockerfile
server/: .gitignore  .swp  Cargo.toml  config.toml  package.json
server/migrations/2023-02-04-095036_create_groups/: down.sql  up.sql
server/migrations/2023-02-05-095036_create_users/: up.sql
server/migrations/2023-03-04-082724_create_gallery/: down.sql  up.sql
server/migrations/2023-03-27-092714_kv_storage/: down.sql  up.sql
server/src/: config.rs  db.rs  main.rs  middlewares.rs  models.rs  routers.rs  schedulers.rs  schema.rs
server/src/middlewares/: csrf.rs  guard.rs  session.rs  static_server.rs
server/src/routers/: auth.rs  fs.rs  gallery.rs  index.rs  kv_storage.rs  log.rs  message_queue.rs  shell.rs  system_info.rs  tunnel.rs  win_shell.rs
server/src/routers/tunnel/: http.rs  websockify.rs
server/src/schedulers/: update_file_index.rs
server/src/utils/: auth.rs  crypto.rs  doc_parser.rs  error.rs  eventbus.rs  gallery.rs  log.rs  mod.rs  parser.rs  path.rs  performance.rs  response.rs  search_engine.rs  session.rs  stream.rs  system_info.rs  transcode.rs  vfs.rs
(+103 files in other folders)
